Fix Bug Overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .row {
   width: 992px;
   margin-left: auto;
@@ -73,19 +80,21 @@ img {
 }
 
 
+
+
 @media screen and (max-width: 420px){
 
 
 
 
   body{
-    font-size: 0.8em;
+    font-size: 0.7em;
     width: 420px;
     margin: 0;
     padding: 0;
     text-align: center;
     box-sizing: border-box;
-    
+
   }
 
   h1{
@@ -105,7 +114,7 @@ img {
     padding-top: 20px ;
     padding-bottom: 20px;
   }
-  
+
 
   .container{
     background-color: rgb(242, 242, 205);
