--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .row {
   width: 992px;
   margin-left: auto;
@@ -78,13 +85,13 @@ img {
 
 
   body{
-    font-size: 1em;
+    font-size: .8em;
     width: 780px;
     margin: 0;
     padding: 0;
     text-align: center;
     box-sizing: border-box;
-    
+
   }
 
   h1{
@@ -104,7 +111,7 @@ img {
     padding-top: 20px ;
     padding-bottom: 20px;
   }
-  
+
 
   .container{
     background-color: rgb(242, 242, 205);
@@ -150,13 +157,13 @@ img {
 
 
   body{
-    font-size: 0.8em;
+    font-size: 0.7em;
     width: 420px;
     margin: 0;
     padding: 0;
     text-align: center;
     box-sizing: border-box;
-    
+
   }
 
   h1{
@@ -176,7 +183,7 @@ img {
     padding-top: 20px ;
     padding-bottom: 20px;
   }
-  
+
 
   .container{
     background-color: rgb(242, 242, 205);
@@ -214,4 +221,3 @@ img {
     padding: 10px;
   }
 }
-
